test: service, repository 테스트 코드 수정 및 보충